.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-deployment
  namespace: example-user
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: example-deployment
