.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-deployment-ingress
  namespace: example-user
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "certificate-issuer"
spec:
  tls:
  - hosts:
    - example-endpoint.juliustens.eu
    secretName: example-deployment-tls
  rules:
  - host: example-endpoint.juliustens.eu
    http:
      paths:
      - backend:
          serviceName: example-deployment
          servicePort: 80
